--- a/app/templates/configure/overall.html
+++ b/app/templates/configure/overall.html
@@ -8,8 +8,10 @@
 
 {% block content %}
     <h1>Overall Settings</h1>
-    <p class="info">If all win conditions are fulfilled,
-    a checkmark will be shown by the title on the Overview screen.</p>
+    <p class="info">When all win conditions are fulfilled,
+    a checkmark will be shown by the title on the Overview screen.
+    At that point, you can either consider the scenario finished
+    or continue playing and perhaps adjust the win conditions.</p>
     <form method="post">
         <label for="title">Scenario Title:</label>
         <input type="text" id="title" name="scenario_title" value="{{ current.title }}" required><br>
@@ -53,7 +55,7 @@
                     {% endfor %}
                 </select>
                 <label for="attrib-value">Attribute Value:</label>
-                <input type="number" id="attrib-value" name="attrib_value" value="{{ current.win_reqs.attrib_value|default(0) }}">
+                <input type="text" id="attrib-value" name="attrib_value" value="{{ current.win_reqs.attrib_value|default(0) }}">
                 <button type="button" id="add-char-req" class="lesser-button">Save Requirement</button>
             </div>
             
@@ -67,7 +69,7 @@
                     {% endfor %}
                 </select>
                 <label for="item-quantity">Quantity:</label>
-                <input type="number" id="item-quantity" name="item_quantity" value="0">
+                <input type="text" id="item-quantity" name="item_quantity" value="0">
                 <label>At Location:</label>
                 <select class="location-select">
                     <option value="" selected>(None)</option>
@@ -85,6 +87,14 @@
                 <button type="button" id="add-item-req" class="lesser-button">Save Requirement</button>
         </div><br>
         <br>
+        <label for="number_format">Number Format:</label>
+        <select id="number_format" name="number_format">
+            <option value="sci">Scientific 1.23e6</option>
+            <option value="abbr">Abbreviated 1.23m</option>
+            <option value="en_US">International 1,230,000</option>
+            <option value="en_IN">Indian 12,30,000</option>
+            <option value="de_DE">European 1.230.000,00</option>
+        </select><br>
         <label for="slots">Equipment Slots:</label>
         <textarea id="slots" name="slots" rows="5" cols="15">{{ '\n'.join(current.slots) }}</textarea><br>
         <div class="footer-buttons">
@@ -94,6 +104,12 @@
     </form>
     <script>
         $(document).ready(function() {
+            // default for select box
+            const defaultNumberFormat = '{{ current.number_format }}';
+            if (defaultNumberFormat) {
+                $('#number_format').val(defaultNumberFormat);
+            }
+
             document.getElementById('add-char-req-button').addEventListener('click', function () {
                 document.querySelector('.char-req-container').style.display = 'block';
                 document.querySelector('.item-req-container').style.display = 'none';
