--- a/app/templates/play/event.html
+++ b/app/templates/play/event.html
@@ -53,14 +53,14 @@
                     {% if current.outcome_type == 'fourway' or current.outcome_type == 'numeric' %}
                         <div style="background-color: black; margin: 0px; padding: 10px">
                         <label for="stat_adjustment">Stat Adjustment:</label>
-                        <input type="number" id="stat_adjustment" name="stat_adjustment" value="{{ current.stat_adjustment }}">
+                        <input type="text" id="stat_adjustment" name="stat_adjustment" value="{{ current.stat_adjustment }}">
                         <br>
                         {% for attr in current.determining_attrs %}
                             <li>{{ attr.name }}
                             <select class="char-for-attr" id="char-for-attr_{{ attr.id }}">
                                 <option value="" selected>(Select character)</option>
                                 {% for char in game_data.characters if attr.id in char.attribs %}
-                                    {% set attrib_val = char.attribs[attr.id].val | dec2str %}
+                                    {% set attrib_val = char.attribs[attr.id].val | formatNum %}
                                     <option value="{{ attrib_val }}" {% if char.id == session['last_char_id'] %}selected{% endif %}>{{ char.name }} {{ attrib_val }}</option>
                                 {% endfor %}
                             </select>
@@ -84,6 +84,7 @@
     </table>
     <script>
         $(document).ready(function() {
+            // remember default for select box in client side storage
             let selectedDifficulty = localStorage.getItem('selectedDifficulty');
             if (selectedDifficulty === null) {
                 selectedDifficulty = '10';
