--- a/app/templates/play/event.html
+++ b/app/templates/play/event.html
@@ -34,7 +34,7 @@
         {% if current.description %}
         <tr>
             <td>
-                <p>{{ current.description }}</p>
+                <p>{{ current.description|htmlify }}</p>
             </td>
         </tr>
         {% endif %}
